# PSPL_CMS_AVIONICS_COTS_FSW

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build.sh  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
ads1263/: Makefile  ads1263.h
ext/: gpiod.h
include/: ads1263.h  config.hpp  gpio.hpp  hwif.h  protocols.hpp  queue.hpp  state.hpp  telem_server.hpp
proto/: command_service.proto
sitl_data/: sensornet_data_delta_cf_2_out.csv  sensornet_data_delta_cf_2_out_cut.csv
sitl_harness/: adc.cpp  harness.cpp
src/: ads1263.c  ads1263.h  ads1263.rs  bang_bang.rs  bang_bang_controller.cpp  command_handler.cpp  command_server.rs  config.rs  daq.cpp  daq.rs  data_writer.cpp  data_writer.rs  fsw.cc  gpio.cpp  hwif.c  hwif.cpp  hwif.h  main.cc  main.cpp  main.rs  queue.cpp  stat.cpp  state_writer.cpp  telem_server.cpp  telemetry_writer.cpp
tools/: CMS_Avionics_Channels.xlsx  analyze_sitl.py  avi.py  bangbang.py  channels.py  command.py  constants.py  copy  end  fsw_telemetry_server  run  telem.py  zero.py
